app/static/css/main.css
@font-face {
    font-family: 'Jost';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/jost/v1/92z8tBhPNqw79Ij1C9z1vBQv7mxrZh9NHHnUBkLNPUtGwv1mPRTOmqVU7ial.woff) format('woff');
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

nav ul {
    list-style-type: none;
}
nav ul li {
    display: inline-block;
}

body {
    font-family: 'Jost', sans-serif;
    padding: 10px 20px;
    font-size: 16px;
    background: white;
    color: #111;
}

main {
    max-width: 8in;
}

a {
    color: inherit;
}
a:hover {
    text-decoration: none;
}

h2 {
    font-size: 40px;
}

.entry {

}
.entry.full {

}

.entry .fa-link { color: #344ea9; }
.entry.full .fa-chrome  { color: #3cba54; }
.entry.full .fa-firefox { color: #ff7139; }
.entry.full .fa-safari  { color: #006CFF; }
.entry.full .fa-opera   { color: #ff1b2d; }
.entry.full .fa-edge    { color: #3277bc; }
.entry.full .fa-globe   { color: #18247e; }

footer {
    margin-top: 20px;
}

/* Forms */
form {}
form div {
    margin: 5px 0;
}
form label {
    display: block;
}
textarea,
input[type="text"],
input[type="password"] {
    padding: 5px;
    width: 350px;
    border: solid 1px #ddd;
    display: inline;
    font: inherit;
    outline: none;
}
textarea {
    min-height: 80px;
}
form span input[type="checkbox"],
form span label {
    display: inline;
}
form .error {
    display: block;
    color: #DD3333;
}

